syntax = "proto3";

option java_multiple_files = true;
option java_package = "id.go.bps.request";
option java_outer_classname = "RequestProto";
option objc_class_prefix = "REQUEST";

package bps.protobuf;


message RequestID {
    string id = 1;
}

message SearchQuery {
    string query = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message Response {
    bool success = 1;
    string message = 2;
    string data = 3;
}

